--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -11,6 +11,9 @@ output
   elasticsearch 
   {
     hosts => elasticsearch
-    document_type => "trial_data" 
+    index => "info-%{+YYYY.MM.dd}"
+    document_type => "counter"
+    template => "/sample-template.json"
+    template_name => "info-*"
   }
 }
