--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,12 @@ elasticsearch:
    image: elasticsearch:5.0
    ports:
     - "9200:9200"
+
+ml_model:
+   build: ./ml-model
+   links:
+    - rabbitmq 
+    - redis 
+
+redis: 
+  image: redis 
