make the redis work now

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -3,6 +3,9 @@ input
   rabbitmq
   {
     host => rabbitmq
+    exchange => stock_price
+    exchange_type => fanout
+    exclusive => true 
     queue => random_queue
   }
 }
@@ -11,9 +14,9 @@ output
   elasticsearch 
   {
     hosts => elasticsearch
-    index => "info-%{+YYYY.MM.dd}"
-    document_type => "counter"
+    index => "stock_price-%{+YYYY.MM.dd}"
+    document_type => "tick-price"
     template => "/sample-template.json"
-    template_name => "info-*"
+    template_name => "stock_price-*"
   }
 }
