--- a/ml-model/Dockerfile
+++ b/ml-model/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.5 
 
 WORKDIR /model_service/ 
-
-COPY requirements.txt *.py /model_service/ 
+COPY requirements.txt /model_service/
 
 RUN pip install -r requirements.txt
+
+COPY *.py /model_service/ 
 
 CMD ["python", "model_service.py"]
